Fixing screen alignment

--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -81,3 +81,10 @@ label {
   padding: 0 18px 0 18px;
   width: inherit;
 }
+
+.wrapper {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  justify-content: center;
+}
